situazione attuale html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <h1>Mail List</h1>
 
-    <ul></ul>
+    <ul id="lista-mail"></ul>
 
     <script src="./js/main.js"></script>
     <script
